--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
     "webpack-dev-server": "^3.7.2"
   }
 }
