--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint-utils": "1.4.3",
     "lodash": "4.5.0",
+    "pikaday": "^1.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
