--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-s-alert": "^1.4.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
